2007-08-21  Murad Tagirov  <tmurad@gmail.com>

    Created class GpxFileViewItem. Moved almost all functioanality
    from GpxFileModel to FileViewModel and GpxFileViewItem. Currently
    some part of code is ifdefed with "#if 0" in MarbleWidget and
    MarbleControlBox to keep existing functionality.
    * src/lib/MarbleWidget.{h,cpp}
    * src/lib/MarbleModel.{h,cpp}
    * src/lib/FileViewModel.{h,cpp}: new class
    * src/lib/GpxFileViewItem.{h,cpp}
    * src/lib/MarbleControlBox.cpp
    * src/lib/CMakeLists.txt
    * src/lib/AbstractFileViewItem.h

    Introduced FileViewModel class and AbstactFileViewItem class
    with pure virtual methods (saveFile(), closeFile()). We could
    create KMLFileViewItem, GpxFileViewItem and implement this methods
    in order to show opened files in FileView without touching model.
    * src/lib/FileViewModel.{h,cpp}: new class
    * src/lib/AbstractFileViewItem.h: new class
    * src/lib/MarbleControlBox.cpp
    * src/lib/FileViewModel.cpp
    * src/lib/CMakeLists.txt
    * docs/projects/kml/KMLClasses.xmi


2007-08-21  Murad Tagirov  <tmurad@gmail.com>

    Inherit KMLPlaceMark -> PlaceMark -> KMLFeature like
    in kml class diagram.
    * src/lib/kml/KMLFeature.{h,cpp}
    * src/lib/kml/KMLPlaceMark.{h,cpp}
    * src/lib/PlaceMark.{h,cpp}


2007-08-20  Carlos Licea  <carlos_licea@hotmail.com>
    *MarbleWidget: added a test to see if the point given
     to geocoordinates in flat projection it's outside the map.
     Also solved a clip problem in paintEvent.
    *VectorMap: added just a clarification to the code.

2007-08-20  Murad Tagirov  <tmurad@gmail.com>

    Inherit PlaceMark from Serializable to be
    able to pack/unpack it's content
    * src/lib/kml/KMLFeature.cpp
    * src/lib/kml/KMLPlaceMarkParser.{h,cpp}
    * src/lib/PlaceMarkPainter.cpp
    * src/lib/PlaceMark.{h,cpp}

    Added destructor to PlaceMarkManager to delete m_documentList.
    Delete d->m_placeMarkManager in MarbleModel's destructor instead of